--- a/views/error.jade
+++ b/views/error.jade
@@ -4,3 +4,6 @@ block content
   h1= message
   h2= error.status
   pre #{error.stack}
+
+
+res.render('error', { message: 'Mensagem de erro', error: { status: 404, stack: 'Stack de erro' } });
